<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.gridgain.ps.k8s</groupId>
	<artifactId>ignite-client</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>igniteclient</name>
	<description>Spring Boot Ignite Client</description>
	<properties>
		<java.version>17</java.version>
		<gridgain.version>8.9.20</gridgain.version>
		<ignite-spring-data-ext.version>2.0.0</ignite-spring-data-ext.version>
		<ignite-spring-autoconfigure-ext.version>2.0.0</ignite-spring-autoconfigure-ext.version>
        <spring-boot.run.jvmArguments>-Dfile.encoding=UTF-8 --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
--add-opens=java.base/java.io=ALL-UNNAMED
--add-opens=java.base/java.nio=ALL-UNNAMED
--add-opens=java.base/java.util=ALL-UNNAMED
--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
--add-opens=java.base/java.lang=ALL-UNNAMED
--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
--add-opens=java.base/java.math=ALL-UNNAMED
--add-opens=java.sql/java.sql=ALL-UNNAMED
--add-opens=java.base/java.net=ALL-UNNAMED
--add-opens=java.base/java.security.cert=ALL-UNNAMED
--add-opens=java.base/sun.security.x509=ALL-UNNAMED
--add-opens=java.base/sun.security.ssl=ALL-UNNAMED</spring-boot.run.jvmArguments>
	</properties>
	<repositories>
		 <repository>
			 <id>GridGain External Repository</id>
			 <url>https://www.gridgainsystems.com/nexus/content/repositories/external</url>
		 </repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-autoconfigure</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.ignite</groupId>
			<artifactId>ignite-spring-data-ext</artifactId>
			<version>${ignite-spring-data-ext.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.ignite</groupId>
		    <artifactId>ignite-spring-boot-thin-client-autoconfigure-ext</artifactId>
		    <version>${ignite-spring-autoconfigure-ext.version}</version>
		</dependency>
		<dependency>
			 <groupId>org.gridgain</groupId>
			 <artifactId>ignite-core</artifactId>
			 <version>${gridgain.version}</version>
		 </dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-kubernetes</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
